sema/testdata/gcc-c90-as-c99/reject/c90-complit-2.c
int *ps = &(static int) { 1 };
int ss = sizeof (static int) { 1 };
